5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1582_1331.log
== SUBMITION (2019-03-16 23:12:22) 
-- CODE:
print(50/3)
-- EXECUTION TIME:
0.149942
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:13:28) 
-- CODE:
print(50//3)
print(resto 50%3)
-- EXECUTION TIME:
0.180612
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 2
    print(resto 50%3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:13:29) 
-- CODE:
print(50//3)
print(resto 50%3)
-- EXECUTION TIME:
0.129426
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 2
    print(resto 50%3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:25:57) 
-- CODE:
print(12//50)
print(resto 50%3)
-- EXECUTION TIME:
0.131603
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 2
    print(resto 50%3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:25:57) 
-- CODE:
print(12//50)
print(resto 50%3)
-- EXECUTION TIME:
0.206416
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 2
    print(resto 50%3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:26:03) 
-- CODE:
print(12//100)
print(resto 50%3)
-- EXECUTION TIME:
0.146876
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 2
    print(resto 50%3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:26:03) 
-- CODE:
print(12//100)
print(resto 50%3)
-- EXECUTION TIME:
0.136015
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 2
    print(resto 50%3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:26:34) 
-- CODE:
print(50//12)
print(resto 50%3)
-- EXECUTION TIME:
0.156606
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 2
    print(resto 50%3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:27:10) 
-- CODE:
print(50//12)
print(resto 4 %3)
-- EXECUTION TIME:
0.225436
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 2
    print(resto 4 %3)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:27:32) 
-- CODE:
print(50//3)
print(resto 12 %3)
-- EXECUTION TIME:
0.155376
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 2
    print(resto 12 %3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:27:37) 
-- CODE:
print(50//3)
print(resto 12 % 3)
-- EXECUTION TIME:
0.127151
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 2
    print(resto 12 % 3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:27:38) 
-- CODE:
print(50//3)
print(resto 12 % 3)
-- EXECUTION TIME:
0.117936
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 2
    print(resto 12 % 3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:51:52) 
-- CODE:
print(50/3)
print(resto 12 % 3)
-- EXECUTION TIME:
0.176279
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 2
    print(resto 12 % 3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:51:52) 
-- CODE:
print(50/3)
print(resto 12 % 3)
-- EXECUTION TIME:
0.171657
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 2
    print(resto 12 % 3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:22:15) 
-- CODE:
print(50//3)
print(resto 12 % 3)
-- EXECUTION TIME:
0.200196
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 2
    print(resto 12 % 3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:22:38) 
-- CODE:
print(48//3)
print(resto 50%3)
-- EXECUTION TIME:
0.160703
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 2
    print(resto 50%3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:22:40) 
-- CODE:
print(48//3)
print(resto 50%3)
-- EXECUTION TIME:
0.115348
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 2
    print(resto 50%3)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:22:48) 
-- CODE:
print(48//3)
print(50%3)
-- EXECUTION TIME:
0.218586
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
